<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.DispositivosMoviles2023.myapplication.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.DispositivosMoviles2023.myapplication.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second"/>
    <fragment
        android:id="@+id/ThirdFragment"
        android:name="com.DispositivosMoviles2023.myapplication.ThirdsFragment"
        android:label="@string/third_fragment_label"
        tools:layout="@layout/fragment_third">

        <action
            android:id="@+id/action_ThirdFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>

    <fragment
        android:id="@+id/FourFragment"
        android:name="com.DispositivosMoviles2023.myapplication.FourFragment"
        android:label="@string/four_fragment_label"
        tools:layout="@layout/fragment_four">

        <action
            android:id="@+id/action_FourFragment_to_FirstFragment"
            app:destination="@id/FourFragment" />
    </fragment>
</navigation>